properties_info_table may be in arena or shm

For immutable classes it should be shm instead of in arena.

Related to bug #77615.